--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -1,13 +1,13 @@
 .Homepage_container{
     background: #F3F2EF;
     height: 100vh;
+    width: 100vw;
 }
 
 .all_sections{
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    justify-items: center;
+    grid-template-columns: 225px 543px 253px;
+    justify-content: center;
     gap: 20px;
     margin-top: 20px;
-    /* overflow: auto; */
 }
