--- a/src/components/commentSection/comment.css
+++ b/src/components/commentSection/comment.css
@@ -50,3 +50,15 @@
     margin-bottom: 10px;
     background: #F2F2F2;
 }
+
+.commetorDetails p{
+    font-size: 13px;
+    font-weight: 600;
+    margin-bottom: 8px;
+}
+
+.comment_content p{
+    font-weight: 500;
+    font-size: 12px;
+    color: #666666;
+}
