--- a/src/components/displaypost/displaypost.css
+++ b/src/components/displaypost/displaypost.css
@@ -38,13 +38,29 @@
     color: #0a66c2;
 }
 
+.name_comainter p:first-child{
+    font-size: 14px;
+    font-weight: 600;
 
+}
+
+.name_comainter p:last-child{
+    font-size: 12px;
+    color: #666666;
+    font-weight: 500;
+}
 .socials >div >p{
     font-size: 14px;
     color: #666666;
     font-weight: 600;
 }
 .post_content{
-    padding: 8px 16px 0;
+    width: calc(100% - 30px);
+    padding: 8px 30px 0;
+}
+
+.post_content h1{
+    font-size: 20px;
+    font-weight: 500;
 
 }
